<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlSearchJourney"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFromSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/formFromHintText">

        <AutoCompleteTextView
            android:id="@+id/actvToSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_6sdp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilToSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilFromSearch"
        android:hint="@string/formToHintText">

        <AutoCompleteTextView
            android:id="@+id/actvFromSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_6sdp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSearchJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tilToSearch"
        android:text="@string/formSearchButtonText" />

    <TextView
        android:id="@+id/tvFilterSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilToSearch"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_toLeftOf="@id/btSearchJourney"
        android:onClick="onFilterSearch"
        android:text="@string/formFilterSearchText" />
    
</RelativeLayout>
